<resources>
    <string name="app_name">E-Channeling</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_channeling">Channeling</string>
    <string name="menu_drivingLicenseMedical">Driving License Medical</string>
    <string name="menu_runningNumber">Running Number</string>
    <string name="menu_pCRTest">PCR Test</string>
    <string name="menu_channelHistory">Channel History</string>
    <string name="menu_claimRefund">Claim Refund</string>
    <string name="menu_contactUs">Contact Us</string>


</resources>